--- a/solutions_pgmpy.ipynb
+++ b/solutions_pgmpy.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 Preliminaries: Statistical and Causal Models <a id=\"1\"></a>\n",
+    "## 1 Preliminaries: Statistical and Causal Models <a id=\"user-content-1\" class=\"anchor\" href=\"#1\"></a>\n",
     "\n",
     "### 1.4 Graphs <a id=\"1.4\"></a>\n",
     "\n",
