--- a/solutions_pgmpy.ipynb
+++ b/solutions_pgmpy.ipynb
@@ -7,26 +7,26 @@
     "# Causal Inference in Statistics: A Primer\n",
     "Bill Behrman 2023-04-17\n",
     "\n",
-    "-   [1 Preliminaries: Statistical and Causal Models](#1)\n",
-    "    -   [1.4 Graphs](#1.4)\n",
-    "        -   [Study question 1.4.1](#1.4.1)\n",
-    "        -   [Study question 1.5.1](#1.5.1)\n",
-    "-   [2 Graphical Models and Their Applications](#2)\n",
-    "    -   [2.3 Colliders](#2.3)\n",
-    "        -   [Study question 2.3.1](#2.3.1)\n",
-    "    -   [2.4 d-separation](#2.4)\n",
-    "        -   [Study question 2.4.1](#2.4.1)\n",
-    "    -   [2.5 Model Testing and Causal Search](#2.5)\n",
-    "        -   [Study question 2.5.1](#2.5.1)\n",
-    "-   [3 The Effects of Interventions](#3)\n",
-    "    -   [3.3 The Backdoor Criterion](#3.3)\n",
-    "        -   [Study question 3.3.1](#3.3.1)\n",
-    "    -   [3.4 The Front-Door Criterion](#3.4)\n",
-    "        -   [Study question 3.4.1](#3.4.1)\n",
-    "    -   [3.5 Conditional Interventions and Covariate-Specific Effects](#3.5)\n",
-    "        -   [Study question 3.5.1](#3.5.1)\n",
-    "    -   [3.8 Causal Inference in Linear Systems](#3.8)\n",
-    "        -   [Study question 3.8.1](#3.8.1)\n",
+    "-   1 Preliminaries: Statistical and Causal Models\n",
+    "    -   1.4 Graphs\n",
+    "        -   Study question 1.4.1\n",
+    "        -   Study question 1.5.1\n",
+    "-   2 Graphical Models and Their Applications\n",
+    "    -   2.3 Colliders\n",
+    "        -   Study question 2.3.1\n",
+    "    -   2.4 d-separation\n",
+    "        -   Study question 2.4.1\n",
+    "    -   2.5 Model Testing and Causal Search\n",
+    "        -   Study question 2.5.1\n",
+    "-   3 The Effects of Interventions\n",
+    "    -   3.3 The Backdoor Criterion\n",
+    "        -   Study question 3.3.1\n",
+    "    -   3.4 The Front-Door Criterion\n",
+    "        -   Study question 3.4.1\n",
+    "    -   3.5 Conditional Interventions and Covariate-Specific Effects\n",
+    "        -   Study question 3.5.1\n",
+    "    -   3.8 Causal Inference in Linear Systems\n",
+    "        -   Study question 3.8.1\n",
     "\n",
     "The following are solutions using the [pgmpy](https://pgmpy.org/) Python package to study questions from the book\n",
     "\n",
@@ -57,9 +57,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 Preliminaries: Statistical and Causal Models <a id=\"user-content-1\" class=\"anchor\" href=\"#1\"></a>\n",
+    "## 1 Preliminaries: Statistical and Causal Models\n",
     "\n",
-    "### 1.4 Graphs <a id=\"1.4\"></a>\n",
+    "### 1.4 Graphs\n",
     "\n",
     "Figure 1.8. A directed graph used in study question 1.4.1."
    ]
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Study question 1.4.1 <a id=\"1.4.1\"></a>\n",
+    "#### Study question 1.4.1\n",
     "\n",
     "Consider the graph shown in Figure 1.8:\n",
     "\n",
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Study question 1.5.1 <a id=\"1.5.1\"></a>\n",
+    "#### Study question 1.5.1\n",
     "\n",
     "(a) Draw the graph that complies with the model."
    ]
@@ -292,9 +292,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2 Graphical Models and Their Applications <a id=\"2\"></a>\n",
+    "## 2 Graphical Models and Their Applications\n",
     "\n",
-    "### 2.3 Colliders <a id=\"2.3\"></a>\n",
+    "### 2.3 Colliders\n",
     "\n",
     "Figure 2.5. A directed graph for demonstrating conditional independence (error terms are not shown explicitly)."
    ]
@@ -378,7 +378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Study question 2.3.1 <a id=\"2.3.1\"></a>\n",
+    "#### Study question 2.3.1\n",
     "\n",
     "(a) List all pairs of variables in Figure 2.5 that are independent conditional on the set Z = {R, V}."
    ]
@@ -412,14 +412,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(S ⟂ U | R, V)\n",
-      "(S ⟂ X | R, V)\n",
-      "(S ⟂ Y | R, V)\n",
-      "(T ⟂ X | R, V)\n",
-      "(T ⟂ Y | R, V)\n",
-      "(U ⟂ X | R, V)\n",
-      "(U ⟂ Y | R, V)\n",
-      "(X ⟂ Y | R, V)\n"
+      "(S ⟂ U | V, R)\n",
+      "(S ⟂ X | V, R)\n",
+      "(S ⟂ Y | V, R)\n",
+      "(T ⟂ X | V, R)\n",
+      "(T ⟂ Y | V, R)\n",
+      "(U ⟂ X | V, R)\n",
+      "(U ⟂ Y | V, R)\n",
+      "(X ⟂ Y | V, R)\n"
      ]
     }
    ],
@@ -472,7 +472,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "(R ⟂ T | S)\n(R ⟂ U)\n(R ⟂ V)\n(R ⟂ Y)\n(S ⟂ U)\n(S ⟂ V)\n(S ⟂ X | R)\n(S ⟂ Y)\n(T ⟂ V | U)\n(T ⟂ X | S)\n(T ⟂ Y | V)\n(U ⟂ X)\n(U ⟂ Y | V)\n(V ⟂ X)\n(X ⟂ Y)"
+      "text/plain": "(R ⟂ T | S)\n(R ⟂ U)\n(R ⟂ V)\n(R ⟂ Y)\n(S ⟂ U)\n(S ⟂ V)\n(S ⟂ X | R)\n(S ⟂ Y)\n(T ⟂ V | U)\n(T ⟂ X | S)\n(T ⟂ Y | U)\n(U ⟂ X)\n(U ⟂ Y | V)\n(V ⟂ X)\n(X ⟂ Y)"
      },
      "execution_count": 15,
      "metadata": {},
@@ -499,11 +499,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(S ⟂ X | R, P)\n",
-      "(T ⟂ X | R, P)\n",
-      "(U ⟂ X | R, P)\n",
-      "(V ⟂ X | R, P)\n",
-      "(X ⟂ Y | R, P)\n"
+      "(S ⟂ X | P, R)\n",
+      "(T ⟂ X | P, R)\n",
+      "(U ⟂ X | P, R)\n",
+      "(V ⟂ X | P, R)\n",
+      "(X ⟂ Y | P, R)\n"
      ]
     }
    ],
@@ -528,7 +528,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "(P ⟂ R | T)\n(P ⟂ S | T)\n(P ⟂ U | T)\n(P ⟂ V | T)\n(P ⟂ X | T)\n(P ⟂ Y | V)\n(R ⟂ T | S)\n(R ⟂ U)\n(R ⟂ V)\n(R ⟂ Y)\n(S ⟂ U)\n(S ⟂ V)\n(S ⟂ X | R)\n(S ⟂ Y)\n(T ⟂ V | U)\n(T ⟂ X | S)\n(T ⟂ Y | V)\n(U ⟂ X)\n(U ⟂ Y | V)\n(V ⟂ X)\n(X ⟂ Y)"
+      "text/plain": "(P ⟂ R | T)\n(P ⟂ S | T)\n(P ⟂ U | T)\n(P ⟂ V | T)\n(P ⟂ X | T)\n(P ⟂ Y | T)\n(R ⟂ T | S)\n(R ⟂ U)\n(R ⟂ V)\n(R ⟂ Y)\n(S ⟂ U)\n(S ⟂ V)\n(S ⟂ X | R)\n(S ⟂ Y)\n(T ⟂ V | U)\n(T ⟂ X | S)\n(T ⟂ Y | U)\n(U ⟂ X)\n(U ⟂ Y | V)\n(V ⟂ X)\n(X ⟂ Y)"
      },
      "execution_count": 17,
      "metadata": {},
@@ -622,7 +622,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4 d-separation  <a id=\"2.4\"></a>\n",
+    "### 2.4 d-separation\n",
     "\n",
     "Figure 2.9. A causal graph used in study question 2.4.1. All error terms (not shown) are assumed to be mutually independent."
    ]
@@ -676,7 +676,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Study question 2.4.1 <a id=\"2.4.1\"></a>\n",
+    "#### Study question 2.4.1\n",
     "\n",
     "(a) For each pair of nonadjacent nodes in this graph, find a set of variables that d-separates that pair. What does this list tell us about independencies in the data?"
    ]
@@ -688,7 +688,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "(W ⟂ Z_1 | X)\n(W ⟂ Z_2 | X)\n(W ⟂ Z_3 | X)\n(X ⟂ Y | Z_1, W, Z_3)\n(X ⟂ Z_2 | Z_1, Z_3)\n(Y ⟂ Z_1 | Z_2, W, Z_3)\n(Z_1 ⟂ Z_2)"
+      "text/plain": "(W ⟂ Z_1 | X)\n(W ⟂ Z_2 | X)\n(W ⟂ Z_3 | X)\n(X ⟂ Y | W, Z_1, Z_3)\n(X ⟂ Z_2 | Z_1, Z_3)\n(Y ⟂ Z_1 | W, Z_2, Z_3)\n(Z_1 ⟂ Z_2)"
      },
      "execution_count": 21,
      "metadata": {},
@@ -758,10 +758,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(W ⟂ Z_1 | Z_2, Y, X, Z_3)\n",
-      "(X ⟂ Y | Z_2, Z_1, W, Z_3)\n",
-      "(X ⟂ Z_2 | Y, Z_1, W, Z_3)\n",
-      "(Y ⟂ Z_1 | Z_2, X, Z_3, W)\n"
+      "(W ⟂ Z_1 | Z_2, X, Y, Z_3)\n",
+      "(X ⟂ Y | W, Z_2, Z_1, Z_3)\n",
+      "(X ⟂ Z_2 | W, Y, Z_1, Z_3)\n",
+      "(Y ⟂ Z_1 | W, Z_2, X, Z_3)\n"
      ]
     }
    ],
@@ -901,9 +901,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.5 Model Testing and Causal Search <a id=\"2.5\"></a>\n",
+    "### 2.5 Model Testing and Causal Search\n",
     "\n",
-    "#### Study question 2.5.1 <a id=\"2.5.1\"></a>\n",
+    "#### Study question 2.5.1\n",
     "\n",
     "(a) Which of the arrows in Figure 2.9 can be reversed without being detected by any statistical test? \\[Hint: Use the criterion for equivalence class.\\]\n",
     "\n",
@@ -931,7 +931,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "(W ⟂ Z_1 | X)\n(W ⟂ Z_2 | X)\n(W ⟂ Z_3 | X)\n(X ⟂ Y | Z_1, W, Z_3)\n(X ⟂ Z_2 | Z_1, Z_3)\n(Y ⟂ Z_1 | Z_2, W, Z_3)\n(Z_1 ⟂ Z_2)"
+      "text/plain": "(W ⟂ Z_1 | X)\n(W ⟂ Z_2 | X)\n(W ⟂ Z_3 | X)\n(X ⟂ Y | W, Z_1, Z_3)\n(X ⟂ Z_2 | Z_1, Z_3)\n(Y ⟂ Z_1 | W, Z_2, Z_3)\n(Z_1 ⟂ Z_2)"
      },
      "execution_count": 30,
      "metadata": {},
@@ -987,7 +987,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "(W ⟂ Z_2 | Z_1, Z_3)\n(Y ⟂ Z_1 | Z_2, W, Z_3)\n(Z_1 ⟂ Z_2)"
+      "text/plain": "(W ⟂ Z_2 | Z_1, Z_3)\n(Y ⟂ Z_1 | W, Z_2, Z_3)\n(Z_1 ⟂ Z_2)"
      },
      "execution_count": 31,
      "metadata": {},
@@ -1033,9 +1033,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 3 The Effects of Interventions <a id=\"3\"></a>\n",
+    "## 3 The Effects of Interventions\n",
     "\n",
-    "### 3.3 The Backdoor Criterion <a id=\"3.3\"></a>\n",
+    "### 3.3 The Backdoor Criterion\n",
     "\n",
     "Figure 3.8. Causal graph used to illustrate the backdoor criterion in the following study questions."
    ],
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Study question 3.3.1 <a id=\"3.3.1\"></a>\n",
+    "#### Study question 3.3.1\n",
     "\n",
     "Consider the graph in Figure 3.8:\n",
     "\n",
@@ -1138,7 +1138,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "frozenset({frozenset({'B', 'Z'}),\n           frozenset({'C', 'Z'}),\n           frozenset({'D', 'Z'}),\n           frozenset({'A', 'Z'})})"
+      "text/plain": "frozenset({frozenset({'B', 'Z'}),\n           frozenset({'C', 'Z'}),\n           frozenset({'A', 'Z'}),\n           frozenset({'D', 'Z'})})"
      },
      "execution_count": 35,
      "metadata": {},
@@ -1171,7 +1171,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "frozenset({frozenset({'X', 'Z'}),\n           frozenset({'B', 'Z'}),\n           frozenset({'C'}),\n           frozenset({'W', 'Z'}),\n           frozenset({'A', 'Z'})})"
+      "text/plain": "frozenset({frozenset({'B', 'Z'}),\n           frozenset({'C'}),\n           frozenset({'W', 'Z'}),\n           frozenset({'X', 'Z'}),\n           frozenset({'A', 'Z'})})"
      },
      "execution_count": 36,
      "metadata": {},
@@ -1203,9 +1203,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 3.4 The Front-Door Criterion <a id=\"3.4\"></a>\n",
+    "### 3.4 The Front-Door Criterion\n",
     "\n",
-    "#### Study question 3.4.1 <a id=\"3.4.1\"></a>\n",
+    "#### Study question 3.4.1\n",
     "\n",
     "Assume that in Figure 3.8, only X, Y, and one additional variable can be measured. Which variable would allow the identification of the effect of X on Y? What would that effect be?"
    ],
@@ -1245,9 +1245,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 3.5 Conditional Interventions and Covariate-Specific Effects <a id=\"3.5\">\n",
+    "### 3.5 Conditional Interventions and Covariate-Specific Effects\n",
     "\n",
-    "#### Study question 3.5.1 <a id=\"3.5.1\">\n",
+    "#### Study question 3.5.1\n",
     "\n",
     "Consider the causal model of Figure 3.8.\n",
     "\n",
@@ -1263,7 +1263,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 3.8 Causal Inference in Linear Systems <a id=\"3.8\"></a>\n",
+    "### 3.8 Causal Inference in Linear Systems\n",
     "\n",
     "Figure 3.18. Graph corresponding to Model 3.1 in study question 3.8.1."
    ],
@@ -1320,7 +1320,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Study question 3.8.1 <a id=\"3.8.1\"></a>\n",
+    "#### Study question 3.8.1\n",
     "\n",
     "Given the model depicted above, answer the following questions:\n",
     "\n",
@@ -1336,7 +1336,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "(W_1 ⟂ W_2)\n(W_1 ⟂ W_3 | X)\n(W_1 ⟂ Y | Z_3, W_2, W_3)\n(W_1 ⟂ Z_2)\n(W_1 ⟂ Z_3 | Z_1)\n(W_2 ⟂ W_3 | Z_2)\n(W_2 ⟂ X | Z_2)\n(W_2 ⟂ Z_1)\n(W_2 ⟂ Z_3 | Z_2)\n(W_3 ⟂ Z_1 | X)\n(W_3 ⟂ Z_2 | X)\n(W_3 ⟂ Z_3 | X)\n(X ⟂ Y | Z_3, W_2, W_3)\n(X ⟂ Z_1 | W_1, Z_3)\n(X ⟂ Z_2 | W_1, Z_3)\n(Y ⟂ Z_1 | Z_3, W_2, W_3)\n(Y ⟂ Z_2 | Z_3, W_2, W_3)\n(Z_1 ⟂ Z_2)"
+      "text/plain": "(W_1 ⟂ W_2)\n(W_1 ⟂ W_3 | X)\n(W_1 ⟂ Y | W_2, Z_3, W_3)\n(W_1 ⟂ Z_2)\n(W_1 ⟂ Z_3 | Z_1)\n(W_2 ⟂ W_3 | X)\n(W_2 ⟂ X | W_1, Z_3)\n(W_2 ⟂ Z_1)\n(W_2 ⟂ Z_3 | Z_2)\n(W_3 ⟂ Z_1 | X)\n(W_3 ⟂ Z_2 | X)\n(W_3 ⟂ Z_3 | X)\n(X ⟂ Y | W_3, Z_3, W_2)\n(X ⟂ Z_1 | W_1, Z_3)\n(X ⟂ Z_2 | W_1, Z_3)\n(Y ⟂ Z_1 | W_3, Z_3, W_2)\n(Y ⟂ Z_2 | W_3, Z_3, W_2)\n(Z_1 ⟂ Z_2)"
      },
      "execution_count": 39,
      "metadata": {},
